--- a/apps/crucial-website/styles/globals.css
+++ b/apps/crucial-website/styles/globals.css
@@ -40,7 +40,7 @@ main {
     top: 0;
     left: 0;
     background: #246594;
-    z-index: 10;
+    z-index: 11;
     display: flex;
     flex-direction: row;
 
